// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <GifGrid /> should show correctly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__backInDown"
  />
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid animate__animated animate__fadeInUp"
  />
</Fragment>
`;

exports[`Test <GifGrid /> should show item when images are loaded from useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__backInDown"
  />
  <div
    className="card-grid animate__animated animate__fadeInUp"
  >
    <GifGridItem
      id="Ans"
      key="Ans"
      title="ans"
      url="https://localhost/ans.jpg"
    />
  </div>
</Fragment>
`;
